# pucc

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  WORKSPACE.opam.bzl  dune-project  dune-workspace  fpga-book-ch02-first.core  fpga-book-ch03-and.core  fpga-book-ch03-arbiter.core  fpga-book-ch03-decoder.core  fpga-book-ch03-encoder.core  fpga-book-ch03-multiplexer.core  fpga-book-ch03-or.core  fpga-book-ch03-xor.core  fusesoc.conf  hdub.opam
.bazel/: bin  out  pucc  testlogs
.obazl.d/opam/: local.manifest
bootstrap/: BUILD.bazel  README.md
bootstrap/cli/: BUILD.bazel  common.ml  help.ml  impl.ml  implSuite.ml
bootstrap/core/: BUILD.bazel  core.mli  coreTest.mli  locSuite.ml  locTest.ml  seq.ml  seqSuite.ml  seqTest.ml  sym.ml  symSuite.ml  symTest.ml  utilSuite.ml  (+1 more)
bootstrap/pipeline/lang/asm/: BUILD.bazel  asmTest.mli
bootstrap/pipeline/lang/asm/riscV/: BUILD.bazel  astTest.ml  riscVTest.mli
bootstrap/pipeline/lang/clo/: BUILD.bazel  clo.mli  cloAst.ml  cloAstSuite.ml  cloAstTest.ml  cloTest.mli
bootstrap/pipeline/lang/cps/: BUILD.bazel  cps.mli  cpsAst.ml  cpsAstSuite.ml  cpsAstTest.ml  cpsTest.mli
bootstrap/pipeline/lang/instr/: BUILD.bazel  instr.mli  instrAstSuite.ml  instrAstTest.ml  instrTest.mli
bootstrap/pipeline/lang/ir/: BUILD.bazel  ir.mli  irAst.ml  irAstSuite.ml  irAstTest.ml  irTest.mli
bootstrap/pipeline/lang/mono/: BUILD.bazel  mono.mli  monoAst.ml  monoAstSuite.ml  monoAstTest.ml  monoTest.mli
bootstrap/pipeline/lang/ssa/: BUILD.bazel  ssa.mli  ssaAst.ml  ssaAstSuite.ml  ssaAstTest.ml  ssaTest.mli
bootstrap/pipeline/lang/syntax/: BUILD.bazel  syntax.mli  syntaxAst.ml  syntaxAstSuite.ml  syntaxAstTest.ml  syntaxLoc.ml  syntaxLocSuite.ml  syntaxLocTest.ml  syntaxTest.mli
bootstrap/pipeline/pass/close/: BUILD.bazel  close.mli  closeTest.mli  envSuite.ml  envTest.ml  pass.ml  passSuite.ml
bootstrap/pipeline/pass/desug/: BUILD.bazel  desug.mli  desugTest.mli  envSuite.ml  envTest.ml  pass.ml  passSuite.ml
bootstrap/pipeline/pass/flatten/: BUILD.bazel  env.ml  envSuite.ml  envTest.ml  flatten.mli  flattenTest.mli  pass.ml  passSuite.ml
bootstrap/pipeline/pass/kont/: BUILD.bazel  envSuite.ml  envTest.ml  kont.mli  kontTest.mli  pass.ml  passSuite.ml
bootstrap/pipeline/pass/monomorph/: BUILD.bazel  envSuite.ml  envTest.ml  monomorph.mli  monomorphTest.mli  pass.ml  passSuite.ml  passTest.ml
bootstrap/pipeline/pass/norm/: BUILD.bazel  envSuite.ml  envTest.ml  norm.mli  normTest.mli  pass.ml  passSuite.ml
bootstrap/pipeline/pass/parse/: BUILD.bazel  core.mly  expr.mly  file.mly  import.mly  lexer.mll  lit.mly  name.mly  op.mly  parse.ml  parse.mli  parseAction.ml  parseEntry.ml  parseEnv.ml  parseEnvSuite.ml  parseSuite.ml  parseTest.ml  parseTest.mli  parseToken.ml  patt.mly  pkg.mly  tokens.mly  top.mly  ty.mly
cmdline/: README.md  cmdline.unit.pucc
cores/: BUILD.bazel  VerilatedFixtures.sv  VerilatorFixtures.sv  bus.h  clock.cc  clock.h  clocked-design-test.h  clocked-design.cc  clocked-design.h  combinatorial-design-test.h  combinatorial-design.h  cores-unit-test-main.cc  cores.h  design-test.h  design.h  device-clock.h  device-input-bus-test.h  device-input-bus.h  device-input-port-test.h  device-input-port.h  device-output-bus-test.h  device-output-port-test.h  device-output-port.h  device-port-test.h  device-port.h  device-reset.h  device-unit-test-main.cc  device.h  input-bus-test.cc  input-bus-test.h  input-bus.h  input-port-test.cc  input-port-test.h  input-port.h  input-signal-test.cc  input-signal-test.h  input-signal.cc  input-signal.h  input.h  output-bus-test.cc  (+94 more)
cores/alu/: alu.sv  bin-op.sv
cores/alu/arith/: core.sv
cores/alu/arith/add/: BUILD.bazel  NativeAddOp.sv  add-op.formal.abstr.sv  add-op.impl.native.sv  add-op.impl.native.test.integ.device.sv  add-op.impl.native.test.integ.verilator.main.cc  add-op.impl.native.test.integ.verilator.sv  add-op.impl.native.test.unit.device.sv  add-op.impl.native.test.unit.verilator.main.cc  add-op.impl.native.test.unit.verilator.sv  add-op.interf.sv  add-op.test.harness.sv  add-op.test.integ.cc  add-op.test.integ.h  add-op.test.unit.cc  add-op.test.unit.h
cores/alu/arith/sub/: core.sv
cores/alu/logic/: core.sv
cores/alu/logic/and/: core.sv
cores/alu/logic/or/: core.sv
cores/alu/logic/xor/: core.sv
cores/alu/shift/: core.sv
cores/fifo/: core.sv
cores/logic/agg/: BUILD.bazel
cores/logic/agg/all/: HDubCoreLogicAll.sv
cores/logic/agg/any/: BUILD.bazel  HDubCoreLogicAny.sv
cores/logic/agg/none/: BUILD.bazel  HDubCoreLogicNone.sv
cores/logic/bitwise/: HDubCoreLogicBitwiseBinOpIf.sv  HDubCoreLogicUnGateIf.sv
cores/logic/bitwise/and/: HDubCoreLogicBitwiseAndOp.sv
cores/logic/bitwise/not/: BUILD.bazel  HDubCoreLogicBitwiseNotOp.sv
cores/logic/bitwise/or/: BUILD.bazel
cores/logic/bitwise/xor/: BUILD.bazel  HDubCoreLogicBitwiseXorOp.sv
cores/logic/gate/: BUILD.bazel  HDubCoreLogicBinGateFactory.sv  HDubCoreLogicGateNot.sv  HDubCoreLogicGateXor.sv  HDubCoreLogicUnGateFactory.sv  HDubCoreLogicUnGateIf.sv  hdub_core_logic_gate.sv
cores/piso/: unit-test.cc  unit-test.h
cores/register/piso/: BUILD.bazel  Piso.sv  unit-test-main.cc  unit-test.cc  unit-test.h
cores/register/sipo/: Sipo.sv  unit-test-main.cc  unit-test.h
cores/sipo/: BUILD.bazel  unit-test.cc
cores/thru-wire/: BUILD.bazel  HDubCoreThruWire.sv  HDubCoreThruWireIf.sv  UnitTestHarness.sv  thru-wire-integration-test.cc  thru-wire-integration-test.h  thru-wire-unit-test.cc  thru-wire-unit-test.h  thru-wire.sv  unit-test-main.cc
cores/uart/: Uart8n1.sv  core.sv
cores/uart/piso/: BUILD.bazel  Piso.sv
cores/uart/rx/: UartRx8n1.sv  core.sv
cores/uart/tx/: UartTx8n1.sv  core.sv
etc/: au_plus.xdc
format/: format.unit.pucc
hdub/cores/thru-wire/: BUILD.bazel  IntegrationTestHarness.sv  IntegrationTestTop.sv  UnitTestTop.sv  integration-test-main.cc  thru-wire-integration-test.h  thru-wire-unit-test.cc
lex/: README.md  lex.pucc
lib/: dune
pinouts/: cu.pcf
punit/: README.md  punit.pucc
rules/: ocaml.bzl  verilog.bzl
test/: dune  runner.ml
yacc/: README.md
(+140 files in other folders)
