opam-version: "2.0"
name: "hdub"
version: "0.1"
synopsis: "Hardware Playground"
description: """
Hardware Playground
"""
maintainer: "Jonathan Bryant <watersofmemory@gmail.com>"
authors: "Jonathan Bryant <watersofmemory@gmail.com>"
license: "MIT"
homepage: "http://github.com/watersofoblivion/hdub"
bug-reports: "http://github.com/watersofoblivion/hdub/issues"
dev-repo: "git+http://github.com/watersofoblivion/hdub"
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "menhir"
  "odoc"
  "cmdliner"
  "ounit2"
  "ANSITerminal"
  "bisect_ppx"
  "uutf"
  "uunf"
  "sedlex"
]
