load("@rules_verilog//verilog:defs.bzl", "verilog_module")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_cc//cc:defs.bzl", "cc_test")

###
# Cores Library
###

# Library
cc_library(
  name = "cores",
  hdrs = [
    "cores.h",
  ],
  srcs = [
    "port.h",
    "bus.h",
    "signal.h",
    "input.h",
    "output.h",
    "input-bus.h",
    "output-bus.h",
    "input-signal.h",
    "output-signal.h",
    "design.h",
    "combinatorial-design.h",
    "clocked-design.h",
    "design-test.h",
    "combinatorial-design-test.h",
    "clocked-design-test.h",
    "input-signal.cc",
    "output-signal.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
  ],
  alwayslink = True,
  visibility = ["//visibility:public"],
)

# Test Fixtures
cc_library(
  name = "cores-fixtures",
  hdrs = [
    "test-input-bus.h",
    "test-output-bus.h",
    "test-input-signal.h",
    "test-output-signal.h",
  ],
  srcs = [
    "test-input-bus.cc",
    "test-output-bus.cc",
    "test-input-signal.cc",
    "test-output-signal.cc",
  ],
  deps = [
    ":cores",
  ],
  alwayslink = True,
  visibility = ["//visibility:private"],
)

# Unit Test Library
cc_library(
  name = "cores-unit-tests",
  hdrs = [
    "input-bus-test.h",
    "output-bus-test.h",
    "input-signal-test.h",
    "output-signal-test.h",
  ],
  srcs = [
    "input-bus-test.cc",
    "output-bus-test.cc",
    "input-signal-test.cc",
    "output-signal-test.cc",
  ],
  alwayslink = True,
  deps = [
    ":cores",
    ":cores-fixtures",
  ],
  visibility = ["//visibility:private"],
)

# Unit Tests
cc_test(
  name = "cores-unit-test",
  srcs = [
    "cores-unit-test-main.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
    ":cores-fixtures",
    ":cores-unit-tests",
  ],
  linkstatic = True,
  visibility = ["//visibility:private"],
)

###
# Verilated Cores Library
###

# Verilator Library
cc_library(
  name = "verilator",
  hdrs = [
    "verilator.h",
  ],
  srcs = [
    "verilator-port.h",
    "verilator-bus.h",
    "verilator-signal.h",
    "verilator-input.h",
    "verilator-output.h",
    "verilator-input-bus.h",
    "verilator-output-bus.h",
    "verilator-input-signal.h",
    "verilator-output-signal.h",
    "verilator-design.h",
    "verilator-combinatorial-design.h",
    "verilator-clocked-design.h",
    "verilator-signal.cc",
    "verilator-input-signal.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
  ],
  visibility = ["//visibility:public"],
)

# Unit Test Fixtures
verilog_module(
  name = "verilator-fixture-module",
  srcs = ["VerilatorFixtures.sv"],
  top = "VerilatorFixtures",
)

verilator_cc_library(
  name = "verilator-fixtures",
  module = ":verilator-fixture-module",
  visibility = ["//visibility:private"]
)

# Unit Test Library
cc_library(
  name = "verilator-unit-tests",
  hdrs = [
    "verilator-bus-test.h",
    "verilator-signal-test.h",
  ],
  srcs = [
    "verilator-bus-test.cc",
    "verilator-signal-test.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
    ":verilator",
    ":verilator-fixtures",
  ],
  alwayslink = True,
  visibility = ["//visibility:private"],
)

# Unit Tests
cc_test(
  name = "verilator-unit-test",
  srcs = [
    "verilator-unit-test-main.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
    ":verilator",
    ":verilator-fixtures",
    ":verilator-unit-tests",
  ],
  visibility = ["//visibility:private"],
)

###
# Device Library
###

# Device Library
cc_library(
  name = "device",
  hdrs = [
    "device.h",
  ],
  srcs = [
    "device-port.h",
    "device-bus.h",
    "device-signal.h",
    "device-input.h",
    "device-output.h",
    "device-input-bus.h",
    "device-output-bus.h",
    "device-input-signal.h",
    "device-output-signal.h",
    "device-design.h",
    "device-combinatorial-design.h",
    "device-clocked-design.h",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
  ],
  visibility = ["//visibility:public"],
)

# Unit Test Fixtures
cc_library(
  name = "device-fixtures",
  hdrs = [

  ],
  srcs = [

  ],
  deps = [
    ":cores",
    ":device",
  ],
  visibility = ["//visibility:private"],
)

# Unit Test Library
cc_library(
  name = "device-unit-tests",
  hdrs = [
    "device-input-bus-test.h",
    "device-output-bus-test.h",
    "device-input-signal-test.h",
    "device-output-signal-test.h",
  ],
  srcs = [
    "device-input-bus-test.cc",
    "device-output-bus-test.cc",
    "device-input-signal-test.cc",
    "device-output-signal-test.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
    ":device",
    ":device-fixtures",
  ],
  alwayslink = True,
  visibility = ["//visibility:private"],
)

# Unit Tests
cc_test(
  name = "device-unit-test",
  srcs = [
    "device-unit-test-main.cc",
  ],
  deps = [
    "@com_google_googletest//:gtest",
    ":cores",
    ":device",
    ":device-fixtures",
    ":device-unit-tests",
  ],
  visibility = ["//visibility:private"],
)
