load("@rules_verilog//verilog:defs.bzl", "verilog_module")

verilog_module(
    name = "srcs",
    top = "HDubCoreLogicUnGateIf",
    srcs = [
        "HDubCoreLogicUnGateIf.sv",
        "HDubCoreLogicBinGateIf.sv",
        "HDubCoreLogicGateAnd.sv",
        "HDubCoreLogicGateOr.sv",
        "HDubCoreLogicGateNot.sv",
        "HDubCoreLogicGateXor.sv",
        "hdub_core_logic_gate.sv",
        "HDubCoreLogicUnGateFactory.sv",
        "HDubCoreLogicBinGateFactory.sv",
    ],
    visibility = ["//visibility:public"]
)
