load("@rules_verilog//verilog:defs.bzl", "verilog_module")
load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")

# Source

verilog_module(
    name = "core",
    top = "Piso",
    srcs = [
      "Piso.sv",
    ],
    visibility = ["//visibility:public"]
)

# Tests

verilator_cc_library(
    name = "verilated",
    module = ":core",
    visibility = ["//visibility:private"]
)

cc_test(
    name = "unit-test",
    size = "small",
    srcs = [
        "unit-test.h",
        "unit-test.cc",
        "unit-test-main.cc",
    ],
    deps = [
        "@com_google_googletest//:gtest",
        "//cores:cores",
        "//cores:verilated",
        ":verilated",
    ],
    visibility = ["//visibility:private"]
)
