load("@//rules:ocaml.bzl", "ocaml_package")

ocaml_package(
    name = "asm",
    label = "Assembly",
    modules = [
        "ast"
    ],
    deps = [
        "//bootstrap/core:core",
    ],
    test_deps = [
        "//bootstrap/core:coreTest",
    ],
    visibility = ["//bootstrap:__subpackages__"]
)
