load("@//rules:ocaml.bzl", "ocaml_package")

ocaml_package(
    name = "clo",
    label = "Closure-Passing Syntax",
    modules = [
        "cloAst"
    ],
    deps = [
        "//bootstrap/core:core",
    ],
    test_deps = [
        "//bootstrap/core:coreTest",
    ],
    visibility = ["//bootstrap:__subpackages__"]
)
