load("@//rules:ocaml.bzl", "ocaml_package")

ocaml_package(
    name = "instr",
    label = "Binary Instructions",
    modules = [
        "instrAst"
    ],
    deps = [
        "//bootstrap/core:core",
    ],
    test_deps = [
        "//bootstrap/core:coreTest",
    ],
    visibility = ["//bootstrap:__subpackages__"]
)
