load("@//rules:ocaml.bzl", "ocaml_package")

ocaml_package(
    name = "ir",
    label = "Polymorphic Administrative Normal Form",
    modules = [
        "irAst"
    ],
    deps = [
        "//bootstrap/core:core",
    ],
    test_deps = [
        "//bootstrap/core:coreTest",
    ],
    visibility = ["//bootstrap:__subpackages__"]
)
