load("@//rules:ocaml.bzl", "ocaml_package")

ocaml_package(
    name = "mono",
    label = "Monomorphic Administrative Normal Form",
    modules = [
        "monoAst"
    ],
    deps = [
        "//bootstrap/core:core",
    ],
    test_deps = [
        "//bootstrap/core:coreTest",
    ],
    visibility = ["//bootstrap:__subpackages__"]
)
