load("@//rules:ocaml.bzl", "ocaml_package")

ocaml_package(
    name = "ssa",
    label = "Static Single-Assignment Form",
    modules = [
        "ssaAst"
    ],
    deps = [
        "//bootstrap/core:core",
    ],
    test_deps = [
        "//bootstrap/core:coreTest",
    ],
    visibility = ["//bootstrap:__subpackages__"]
)
